--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -79,7 +79,7 @@ where $\tilde{C}^{\rm window}$ is the survey mask power spectrum, i.e., the sphe
 
 
 
-The lognormal simulations are used to validate our survey window and integral constraint correction. Figure \ref{fig:model_mock} shows the mean power spectrum of the $\fnl=0$ simulations (dashed) and the best-fitting theory prediction before and after accounting for the survey mask and integral constraint. The simulations are neither contaminated nor mitigated. The light and dark shades represent the 68\% estimated error on the mean and one single realization, respectively. The DESI mask, which covers around $40\%$ of the sky, is applied to the simulations. We find that the survey window effect modulates the clustering power on $\ell < 200$ and the integral constraint alters the clustering power on $\ell < 6$.
+The lognormal simulations are used to validate the survey window and integral constraint correction. Figure \ref{fig:model_mock} shows the mean power spectrum of the $\fnl=0$ simulations (dashed) and the best-fitting theory prediction before and after accounting for the survey mask and integral constraint. The simulations are neither contaminated nor mitigated. The light and dark shades represent the 68\% estimated error on the mean and one single realization, respectively. The DESI mask, which covers around $40\%$ of the sky, is applied to the simulations. We find that the survey window effect modulates the clustering power on $\ell < 200$ and the integral constraint alters the clustering power on $\ell < 6$.
 
 \subsection{Parameter estimation}
 
@@ -100,9 +100,9 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 
 \subsection{Calibration of over-correction}\label{ssec:calibration}
 
-The template-based mitigation of imaging systematics removes some of the true clustering signal, and \mout{the amount of the removed signal increases as more maps are used for the regression.} \mr{mitigating with more maps should remove more modes and thus bias both the $\fnl$ estimation and its associated uncertainty.} We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. \mr{Having two sets of mocks with low and high power at low $\ell$ offers a key advantage: it provides a model for mapping the entire posterior distribution. This enables us to understand how the constraints on $\fnl$ degrade as the magnitude of the imaging systematic correction increases.}  We apply the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{non-linear three maps}, \textit{non-linear four maps}, and \textit{non-linear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. \mr{Appendix \ref{ssec:contmocks} outlines the impact of the non-linear methods on the mock power spectra, and here we summarize relevant details for the calibration of over-correction.}
+The template-based mitigation of imaging systematics removes some of the true clustering signal, and \mout{the amount of the removed signal increases as more maps are used for the regression.} \mr{mitigating with more maps should remove more modes and thus bias both the $\fnl$ estimation and its associated uncertainty.} We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. \mr{Having two sets of mocks with low and high power at large scales (low $\ell$) offers a key advantage: it provides a model for mapping the entire posterior distribution. This enables us to understand how the constraints on $\fnl$ degrade as the magnitude of the imaging systematic correction increases.}  We apply the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{non-linear three maps}, \textit{non-linear four maps}, and \textit{non-linear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. \mr{Appendix \ref{ssec:contmocks} outlines the impact of the non-linear methods on the mock power spectra, and here we summarize relevant details for the calibration of over-correction.}
 
-Fihgure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates \mr{from the mean of the mocks} are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
+Fihgure \ref{fig:fnlbias} displays a comparison between the best-fitting estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates \mr{from the mean of the mocks} are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
 
 \begin{figure}
 \centering
