--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -17,6 +17,6 @@ However, further work is needed to fully harness the potential of the scale-depe
 
 In addition to the theoretical uncertainties, measuring $\fnl$ through the scale-dependent bias effect is a difficult task due to various imaging systematic effects that can modulate the galaxy power spectrum on large scales. The imaging systematic effects often induce wide-angle variations in the density field, and in general, any large-scale variations can translate into an excess signal in the power spectrum \citep[see, e.g.,][]{huterer2013calibration}, that can be misinterpreted as the signature of non-zero local PNG \citep[see, e.g.,][]{PhysRevLett.106.241301}. Such spurious variations can be caused by Galactic foregrounds, such as dust extinction and stellar density, or varying imaging conditions, such as astrophysical seeing and survey depth \citep[see, e.g.,][]{ross2011}. The imaging systematic issues have made it challenging to accurately measure $\fnl$, as demonstrated in previous efforts to constrain it using the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{2013MNRAS.428.1116R,pullen2013systematic, Ho2015JCAP...05..040H}, and it is anticipated that they will be particularly problematic for wide-area galaxy surveys that observe regions of the night sky closer to the Galactic plane and that seek to incorporate more lenient selection criteria to accommodate fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}.
 
-The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic effects, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a subtle signal, we employ \uw{linear multivariate regression and} artificial neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. We thoroughly investigate potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our methods and results are validated against simulations, with and without imaging systematics.
+The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic effects, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a subtle signal, we employ linear multivariate regression and artificial neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. We thoroughly investigate potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our methods and results are validated against simulations, with and without imaging systematics.
 
-This paper is structured as follows. Section \ref{sec:data} describes the galaxy sample from DESI imaging and lognormal simulations with, or without, PNG and synthetic systematic effects. Section \ref{sec:method} outlines the theoretical framework for modelling the angular power spectrum, \mr{and} strategies for handling various observational and theoretical systematic effects\mout{, and statistical techniques for measuring the significance of remaining systematics in our sample after mitigation}. Our results are presented in Section \ref{sec:results}, and Section \ref{sec:conclusion} summarizes our conclusions and directions for future work.
+This paper is structured as follows. Section \ref{sec:data} describes the galaxy sample from DESI imaging and lognormal simulations with, or without, PNG and synthetic systematic effects. Section \ref{sec:method} outlines the theoretical framework for modelling the angular power spectrum, \mr{and} strategies for handling various observational and theoretical systematic effects\mout{, and statistical techniques for measuring the significance of remaining systematics in our sample after mitigation}\mc{removed as it is moved to appendix}. Our results are presented in Section \ref{sec:results}, and Section \ref{sec:conclusion} summarizes our conclusions and directions for future work.
