update conclusions and results

--- a/sections/results.tex
+++ b/sections/results.tex
@@ -5,10 +5,10 @@ We now present our $\fnl$ constraints obtained from the power spectrum of the DE
 \begin{figure}
     \centering
     \includegraphics[width=0.47\textwidth]{figures/model_dr9.pdf} 
-    \caption{The angular power spectrum of the DESI LRG targets before (\textit{No weight}) and after correcting for imaging systematics using the \mout{linear and} non-linear method \mr{with various combinations of maps}. The curves represent the corresponding best-fitting theory predictions. The solid curve and grey shade respectively represent the mean power spectrum and $68\%$ error from the $\fnl=0$ mocks. \mr{We associate the differences on modes $\ell < 20$ to over-correction.}}
+    \caption{The angular power spectrum of the DESI LRG targets before (\textit{No weight}) and after correcting for imaging systematics using the linear and non-linear method \mr{with various combinations of maps}. The curves represent the corresponding best-fitting theory predictions. The solid curve and grey shade respectively represent the mean power spectrum and $68\%$ error from the $\fnl=0$ mocks. \mr{We associate the differences on modes $\ell < 20$ to over-correction.}}
     \label{fig:cl_dr9}
 \end{figure}
-We find that the excess clustering signal in the power spectrum of the DESI LRG targets is mitigated after correcting for the imaging systematic effects. Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DESI LRG targets before and after applying imaging weights and the best-fitting theory curves. The solid grey line and the grey shade represent respectively the mean power spectrum and 1$\sigma$ error, estimated from the $\fnl=0$ lognormal simulations. The differences between various cleaning methods are significant on large scales ($\ell < 20$), but the small scale clustering measurements are consistent. \mr{We associate the differences to over-correction caused by including more maps for the treatment of systematics.} \mout{By comparing \textit{linear two maps} to \textit{linear three maps}, we find that the measured clustering power on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the additional map for psfsize in the r-band, which is included in \textit{linear three maps}. On other scales, the differences between \textit{linear three maps} and \textit{linear eight maps} are negligible, supporting the idea that our feature selection procedure has been effective in identifying the primary maps which cause the large-scale excess clustering signal. Comparing \textit{non-linear three maps} to \textit{linear three maps}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably indicating some non-linear spurious fluctuations with large scale characteristics due to extinction.} \mr{Comparing \textit{non-linear three maps} to \textit{non-linear four maps}, we find that} adding stellar density in the non-linear approach (\textit{non-linear four maps}) further reduces the excess power relative to the mock power spectrum, in particular on modes between $2\leq \ell < 4$. However, when calibrated on the lognormal simulations, we find that the over-subtraction due to stellar density is reversed after accounting for over-correction.
+We find that the excess clustering signal in the power spectrum of the DESI LRG targets is mitigated after correcting for the imaging systematic effects. Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DESI LRG targets before and after applying imaging weights and the best-fitting theory curves. The solid grey line and the grey shade represent respectively the mean power spectrum and 1$\sigma$ error, estimated from the $\fnl=0$ lognormal simulations. The differences between various cleaning methods are significant on large scales ($\ell < 20$), but the small scale clustering measurements are consistent. \mr{We associate the differences to over-correction caused by including more maps for the treatment of systematics.} By comparing \textit{linear two maps} to \textit{linear three maps}, we find that the measured clustering power on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the additional map for psfsize in the r-band, which is included in \textit{linear three maps}. On other scales, the differences between \textit{linear three maps} and \textit{linear nine maps} are negligible, supporting the idea that our feature selection procedure has been effective in identifying the primary maps which cause the large-scale excess clustering signal. Comparing \textit{non-linear three maps} to \textit{linear three maps}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably indicating some non-linear spurious fluctuations with large scale characteristics due to extinction. \mr{Comparing \textit{non-linear three maps} to \textit{non-linear four maps}, we find that} adding stellar density in the non-linear approach (\textit{non-linear four maps}) further reduces the excess power relative to the mock power spectrum, in particular on modes between $2\leq \ell < 4$. However, when calibrated on the lognormal simulations, we find that the over-subtraction due to stellar density is reversed after accounting for over-correction.
 
 
 \subsubsection{Calibrated constraints}
@@ -17,7 +17,7 @@ We find that the excess clustering signal in the power spectrum of the DESI LRG 
     \raggedleft
     \includegraphics[width=0.439\textwidth, trim={0 1.4cm 0 0},clip]{mcmc_dr9methods1d.pdf}
     \includegraphics[width=0.47\textwidth, trim={0 0 0.15cm 0.2cm},clip]{figures/mcmc_dr9methods.pdf} 
-    \caption{The calibrated constrains from the DESI LRG targets. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DESI LRG targets before and after applying non-linear cleaning methods. The lognormal mocks are used to calibrate these distributions for over-correction.}\label{fig:mcmc_dr9}
+    \caption{The calibrated constrains from the DESI LRG targets. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DESI LRG targets before and after applying the non-linear cleaning methods. The lognormal mocks are used to calibrate these distributions for over-correction.}\label{fig:mcmc_dr9}
 \end{figure}
 
 \begin{figure}
@@ -47,8 +47,7 @@ DESI & Nonlinear Nine Maps              & $    34$& $    24$& $   -10<\fnl<    5
 }
 \end{table*}
 
-All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using \textit{non-linear four maps} which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is greater than zero, $P(\fnl >0)=99.9$ per cent. We also apply a more aggressive systematics treatment that includes regression using the non-linear approach against the full set of imaging maps we identified, non-linear nine maps, and find that \mr{zero $\fnl$ is recovered. Specifically,} our maximum
-likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.1$}, \mout{but} \mr{and uncertainty on $\fnl$ expands, resulting in a range of $-10 (-39) < \fnl < 58 (84)$ at $68\% (95\%)$ confidence. This increase is attributed to the aggressive treatment, which removes large-scale clustering information and diminishes the constraining power of the dataset. Additionally, we explore the sensitivity of the $\fnl$ posterior using the non-linear nine maps method while varying the values of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Figure \ref{fig:fnl_magbias} illustrates our findings, and Table \ref{tab:dr9ps} provides a summary. Regardless of the values chosen for $p$ and $s$, we reliably recover $\fnl=0$ within the $95\%$ confidence interval.} For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
+All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using \textit{non-linear four maps} which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is greater than zero, $P(\fnl >0)=99.9$ per cent\mr{, which can be attributed to unanticipated systematics}. We also apply a more aggressive systematics treatment that includes regression using the non-linear approach against the full set of imaging maps we identified, non-linear nine maps, and find that \mr{zero $\fnl$ is recovered. Specifically,} our maximum likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.1$}, \mout{but} \mr{and the uncertainty on $\fnl$ increases by more than a factor of two, resulting in a range of $-10 (-39) < \fnl < 58 (84)$ at $68\% (95\%)$ confidence. This increase is attributed to the aggressive treatment, which removes large-scale clustering information and diminishes the constraining power of the dataset. Additionally, we explore the sensitivity of the $\fnl$ posterior using the non-linear nine maps method while varying the values of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Figure \ref{fig:fnl_magbias} illustrates our findings, and Table \ref{tab:dr9ps} provides a summary. Regardless of the values chosen for $p$ and $s$, we reliably recover $\fnl=0$ within the $95\%$ confidence interval.} For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
 
 \begin{table*}
     \caption{\mr{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from the DESI LRG targets after non-linear nine maps and various values of $p$ and $s$.}}
@@ -89,7 +88,7 @@ $s=$ 0.75                                    & $    42$& $    31$& $    -1<\fnl<
 \end{table*}
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mr{While reporting the uncalibrated constraints, we therefore include the label `Mitigation Systematics' to emphasize that the $\fnl$ values will be subject to an unknown bias caused by over-correction}. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. Our non-linear three maps returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.}
+Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. The non-linear three maps approach returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.}
 
 \begin{table*}
     \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$\mr{, $p=1$,} and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We fix $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}}
@@ -173,9 +172,9 @@ Now we proceed to perform some robustness tests and assess how sensitive the $\f
 
 \item \textbf{Pixel completeness (\textit{comp. cut})}: We discard pixels with fractional completeness less than half to assess the effect of partially complete pixels on $\fnl$. This pixel completeness cut removes $0.6\%$ of the survey area, and no significant changes in the $\fnl$ constraints are observed.
 
-\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed from our sample by applying the following cuts on imaging; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Although these cuts remove $8\%$ of the survey mask, there is \mout{a negligible}\mr{an insignificant} impact on the best-fitting estimates of $\fnl$ from fitting the DESI power spectrum. However, when each region is fit individually, the BASS+MzLS constraint \mr{is more stable than those from DECaLS North and DECaLS South.} \mout{shift toward higher values of $\fnl$ by approximately $\Delta \fnl \sim 10$, whereas the constraints from the DECaLS North and DECaLS South do not change significantly.} 
+\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed from our sample by applying the following cuts on imaging; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Although these cuts remove $8\%$ of the survey mask, there is a negligible impact on the best-fitting estimates of $\fnl$ from fitting the DESI power spectrum. However, when each region is fit individually, the BASS+MzLS constraint \mr{is more stable than those from DECaLS North and DECaLS South.} \mout{shift toward higher values of $\fnl$ by approximately $\Delta \fnl \sim 10$, whereas the constraints from the DECaLS North and DECaLS South do not change significantly.} 
 
-\item \textbf{Covariance matrix (\textit{cov})}: We fit the power spectrum of our sample cleaned with \textit{non-linear nine maps} correction, but use the covariance matrix constructed from the $\fnl=76.9$ mocks. With the alternative covariance, a \mr{$7\%$} increase in the 68\% error on $\fnl$, $\sigma(\fnl)$, is observed. We also find that the best-fitting and marginalized mean estimates of $\fnl$ increase slightly by \mr{$\Delta \fnl = 2$}. Overall, we find that the differences are not significant in comparison to the statistical precision.
+\item \textbf{Covariance matrix (\textit{cov})}: We fit the power spectrum of our sample cleaned with \textit{non-linear nine maps}, but use the covariance matrix constructed from the $\fnl=76.9$ mocks. With the alternative covariance, a \mr{$7\%$} increase in the 68\% error on $\fnl$, $\sigma(\fnl)$, is observed. We also find that the best-fitting and marginalized mean estimates of $\fnl$ increase slightly by \mr{$\Delta \fnl = 2$}. Overall, we find that the differences are not significant in comparison to the statistical precision.
 
 \item \textbf{External maps (\textit{CALIBZ+HI})}: The neural network \mr{eleven} maps correction includes the additional maps for the neutral column density (HI) and the z-band calibration error (CALIBZ). With this correction, the best-fitting $\fnl$ increases from \mr{$-4$ to $-2$} for DECaLS North and from \mr{$-43$ to $-38$} for DECaLS South, which might suggest that adding HI and CALIBZ increases the input noise, and thus negatively impacts the performance of the neural network model. This test is not performed on BASS+MzLS due to a lack of coverage from the CALIBZ map. 
 
